# HW9_PW_Scraping

./: README.md  pyproject.toml
hwm8/: abstract_classes.py  authors_hw.json  config.ini  connect.py  main.py  models.py  parse_data.py  quotes_hw.json  seeds.py
